# MxxShop

./: .gitignore  Cargo.toml  README.en.md  README.md
config/: Config.toml  log4rs.yaml
docs/sql/: mxx_shop_db.sql
locales/: en.yml  zh-CN.yml
src/: main.rs
src/core/: mod.rs
src/core/errors/: error.rs  mod.rs
src/core/permission/: jwt_util.rs  mod.rs
src/core/service/: data_service.rs  mod.rs  templates_service.rs
src/core/system_macro/: check_permission.rs  mod.rs
src/core/web/: base_controller.rs  mod.rs  response.rs
src/core/web/entity/: common.rs  mod.rs
src/core/web/tags/: i18n_tags.rs  mod.rs  url_tage.rs
src/modules/: mod.rs
src/modules/articles/: mod.rs
src/modules/articles/controller/: mod.rs
src/modules/articles/entity/: article_category_entity.rs  article_category_model.rs  article_entity.rs  article_model.rs  comment_entity.rs  comment_model.rs  label_entity.rs  label_model.rs  mod.rs
src/modules/articles/mapper/: article_category_mapper.rs  article_mapper.rs  comment_mapper.rs  label_mapper.rs  mod.rs
src/modules/articles/service/: article_category_service.rs  article_service.rs  label_service.rs  mod.rs
src/modules/product/entity/: car_entity.rs  category_entity.rs  mod.rs  product_entity.rs  product_model.rs
src/modules/product/mapper/: category_mapper.rs  mod.rs  product_mapper.rs
src/modules/product/service/: category_service.rs  mod.rs  product_service.rs
src/modules/search/entity/: store_entity.rs  store_model.rs
src/modules/search/mapper/: store_mapper.rs
src/modules/search/service/: mod.rs
src/modules/shipping/: mod.rs
src/modules/shipping/controller/: mod.rs
src/modules/statistics/: mod.rs
src/modules/statistics/controller/: mod.rs
src/modules/statistics/entity/: mod.rs  statistics_access_record_entity.rs  statistics_access_record_model.rs  statistics_source_entity.rs
src/modules/statistics/mapper/: mod.rs  statistics_access_record_mapper.rs
src/modules/statistics/service/: mod.rs  (+1 more)
src/modules/system/: mod.rs
src/modules/user/: mod.rs
src/plugins/: authority_intercept.rs  mod.rs
src/routes/: mod.rs  open_routes.rs  system_routes.rs  user_routes.rs
src/utils/: auth.rs  datetime.rs  encryption_utils.rs  file_utils.rs  mod.rs  settings.rs  short_url.rs  snowflake_id.rs  string_utils.rs  time_utils.rs
static/: 404.html
static/default/css/: style.css
templates/default/: 404.html  index.html
templates/default/layout/: footer.html  header.html
(+131 files in other folders)
