[package]
name = "mxx-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
actix-web = { version = "4.6.0", default-features = false, features = ["cookies","macros"] }
actix-http = "3.7.0"
actix-redis = "0.13.0"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-identity = "0.7.1"
actix-web-grants = "4.1.0"
actix-web-httpauth = "0.8.1"


futures-util = "0.3.30"
parking_lot = "0.12.3"

json = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
validator = { version = "0.18.1", features = ["derive"] }

log = "0.4.21"
log4rs = "1.3.0"
console = "0.15.8"

rbs = { version = "4.5.13" }
#rbatis = { version = "4.5.21", features = ["debug_mode"]}
rbatis = { version = "4.5.21"}
rbdc-mysql = { version = "4.5.7" }

jsonwebtoken = "9.3.0"
snowflake-multi-threaded = "0.1.4"
redis = { version = "0.25.3", features = ["tokio-comp"] }

futures = { version = "0.3.30", default-features = false }
thiserror = "1.0.61"
base64 = "0.22.0"
bcrypt = "0.15.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
toml = "0.8.13"
chinese-lunisolar-calendar = "0.2.0"
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
# 模板引擎
tera = "1.20.0"
rand = "0.9.0-alpha.1"
random-fast-rng = "0.1.1"
idgenerator = "2.0.0"

chrono = { version = "0.4.38", features = ["unstable-locales"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }

image = "0.25.1"
regex = "1.10.4"
failure = "0.1.8"
pinyin = "0.10.0"
scraper = "0.19.0"
#captcha
captcha = "0.0.9"

proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
#elasticsearch操作
elasticsearch = "8.5.0-alpha.1"
#中文分词
jieba-rs = "0.7.0"
bytes = "1.6.0"

config = "0.14.0"
rust-crypto = "0.2.36"
sanitize-filename = "0.5.0"
headers = "0.4.0"
#国际化包
rust-i18n = "3.0.1"
time = "0.3.36"

#任务调度
job_scheduler = "1.2.1"


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
